Five-lane keys (#1089)
* Implemented, but dealing with genericization issues

* +unstaged files

* Fix theme caching bug

* Simplify 5L Keys player theme caching

* 5L keys score cards

* Decouple game modes from visual styles

* 5LK range shifts and profile setting (no modifier yet)

* Remove accidentally-committed files

* Implement 5L Keys no range shifts modifier

* Add FiveLaneKeysPlayer to GameManager::PlayerDebug

* 5L Keys-aware UI string updates

* 5L Keys replays

* 5L Keys score card prefab, reduce use of ToNativeGameMode()

* Rename FiveFret prefabs for consistency and differentiation

* Undo accidental YARG.Core submodule commit

* Fix outdated GameMode.ProKeys reference

* Update 5L Keys visuals to match 5F Guitar changes

* Default new Keys profiles to PK instead of 5F Guitar

* Revert GameMode.Keys to GameMode.ProKeys

* Update usages of ProKeys namespace to Keys namespace

---------

Co-authored-by: wyrdough <nathan@nwacg.net>

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -19,9 +19,9 @@
             "FiveFretGuitar": "Five Fret Guitar",
             "SixFretGuitar": "Six Fret Guitar",
             "FourLaneDrums": "Standard Drums",
-            "FiveLaneDrums": "5-Lane Drums",
+            "FiveLaneDrums": "Five-Lane Drums",
             "ProGuitar": "Pro Guitar",
-            "ProKeys": "Pro Keys",
+            "ProKeys": "Keys (Pro and Five-Lane)",
             "Menu": "Menu",
             "Vocals": "Vocals"
         },
@@ -646,6 +646,12 @@
             "Key23": "Key 23 (A#3)",
             "Key24": "Key 24 (B3)",
             "Key25": "Key 25 (C4)",
+			"OpenNote": "Five-Lane Open Note",
+			"GreenKey": "Five-Lane Green Key (First)",
+			"RedKey": "Five-Lane Red Key (Second)",
+			"YellowKey": "Five-Lane Yellow Key (Third)",
+			"BlueKey": "Five-Lane Blue Key (Fourth)",
+			"OrangeKey": "Five-Lane Orange Key (Fifth)",
             "StarPower": "Star Power Activate",
             "TouchEffects": "Touch Effects"
         }
@@ -1619,10 +1625,10 @@
                 "SubSection": {
                     "Name": "Game Mode",
                     "Dropdown": {
-                        "Drums": "Drums (4 and 5 lane)",
-                        "FiveFretGuitar": "Five Fret Guitar",
+                        "Drums": "Drums (Four- and Five-Lane)",
+                        "FiveFretGuitar": "Five-Fret Guitar",
                         "Vocals": "Vocals",
-                        "ProKeys": "Pro Keys"
+                        "Keys": "Keys (Pro and Five-Lane)"
                     }
                 },
                 "AntiGhosting": {
