Add option for note height scaling

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -144,7 +144,7 @@
 
             "Reset": "Reset",
             "ResetAll": "Reset All",
-			
+
 			"Scroll" : "Scroll"
         },
         "Credits": {
@@ -1759,6 +1759,9 @@
                 },
                 "StarPowerColor": {
                     "Name": "Star Power Color"
+                },
+                "NoteHeight": {
+                    "Name": "Note Height"
                 }
             }
         }
