--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -18,9 +18,9 @@
         "GameMode": {
             "FiveFretGuitar": "5-Fret Guitar",
             "SixFretGuitar": "6-Fret Guitar",
-            "EliteDrums": "Universal Drums (Ekit)",
-			"FourLaneDrums": "4-Lane and Pro Drums",
-            "FiveLaneDrums": "5-Lane Drums",
+            "EliteDrums": "MIDI Drums",
+			"FourLaneDrums": "RB Drums (4-Lane and Pro)",
+            "FiveLaneDrums": "GH Drums",
             "ProGuitar": "Pro Guitar",
             "ProKeys": "Keys (Pro and 5-Lane)",
             "Menu": "Menu",
