Add setting to disable highway raise/lower animations
- Also fix some bugs I wrote in CameraPositioner and StrikelinePositioner and remove no longer needed Update method from CameraPositioner.

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -144,7 +144,7 @@
 
             "Reset": "Reset",
             "ResetAll": "Reset All",
-			
+
 			"Scroll" : "Scroll"
         },
         "Credits": {
@@ -1264,6 +1264,10 @@
             "EnableTrackEffects": {
                 "Name": "Enable Track Effects",
                 "Description": "If enabled, the game will display track effects for unison, solo, and drum SP activation phrases."
+            },
+            "EnableHighwayRaise": {
+                "Name": "Enable Highway Raise Animation",
+                "Description": "If enabled, the game will raise and lower the highway when the song starts or ends."
             },
             "EnableVoxSamples": {
                 "Name": "Enable Vox Samples",
