--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -4,6 +4,7 @@
         "Region": "United States",
         "ListDelimiter": {
             "Default": ", ",
+            "TwoItem": " and ",
             "Last": ", and "
         }
     },
@@ -172,12 +173,13 @@
                 "Songs": "Songs"
             },
             "Song": {
-                "Name": "\"{0}\" By {1}",
+                "Name": "\"{0}\" by {1}",
                 "WrittenBy": "Written By: {0}",
                 "PerformedBy": "Performed By: {0}",
                 "WrittenAndPerformedBy": "Written and Performed By: {0}",
                 "CourtesyOf": "Courtesy Of: {0}",
                 "AlbumCover": "Album Cover By: {0}",
+                "ChartedBy": "Charted By: {0}",
                 "License": "Song License: {0}"
             }
         },
