Add more song credits and combine any that are duplicative

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -175,12 +175,28 @@
             "Song": {
                 "Name": "\"{0}\" by {1}",
                 "WrittenBy": "Written By: {0}",
+                "ComposedBy": "Composed By: {0}",
+                "ArrangedBy": "Arranged By: {0}",
                 "PerformedBy": "Performed By: {0}",
                 "WrittenAndPerformedBy": "Written and Performed By: {0}",
+                "ProducedBy": "Produced By: {0}",
+                "EngineeredBy": "Engineered By: {0}",
+                "MixedBy": "Mixed By: {0}",
+                "MasteredBy": "Mastered By: {0}",
+                "PublishedBy": "Published By: {0}",
                 "CourtesyOf": "Courtesy Of: {0}",
                 "AlbumCover": "Album Cover By: {0}",
                 "ChartedBy": "Charted By: {0}",
-                "License": "Song License: {0}"
+                "License": "Song License: {0}",
+                "Written": "Written",
+                "Composed": "Composed",
+                "Arranged": "Arranged",
+                "Performed": "Performed",
+                "Produced": "Produced",
+                "Engineered": "Engineered",
+                "Mixed": "Mixed",
+                "Mastered": "Mastered",
+                "By": "By {0}"
             }
         },
         "Dialog": {
