--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -1311,7 +1311,7 @@
                 "Description": "If enabled, the game might make some noises at you on the score screen."
             },
             "EnableNormalization": {
-                "Name": "Enable Normalization",
+                "Name": "Normalize Audio",
                 "Description": "If enabled, normalizes audio so that all songs are approximately the same volume.  Increases memory and performance requirements."
             }
         },
