--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -750,10 +750,6 @@
                 "PauseName": "Bass",
                 "Description": "Adjusts the song's bass guitar track volume. Only does something if the song is multi-track."
             },
-            "ClapsInStarpower": {
-                "Name": "Star Power Claps",
-                "Description": "Enables claps to the beat while Star Power is active."
-            },
             "CountdownDisplay": {
                 "Name": "Countdown Display",
                 "Description": "Choose how countdowns should be displayed during long breaks in a song.",
@@ -1085,9 +1081,18 @@
                 "Name": "Use Full Directory For Playlists",
                 "Description": "Use full directory for the playlist sort option in the music library. <color=white>Rescan required if changed!</color>"
             },
+            "UseStarpowerFx": {
+                "Name": "Use Star Power SFX",
+                "Description": "If enabled, it will add reverb to stems where the player has Star Power enabled.",
+                "Dropdown": {
+                    "MultitrackOnly": "Multitrack Only",
+                    "Off": "Off",
+                    "On": "On"
+                }
+            },
             "UseCrowdFx": {
                 "Name": "Use Crowd SFX",
-                "Description": "If enabled, crowd sounds will be played.",
+                "Description": "If enabled, crowd sounds will be played.\nIf set to Starpower Claps Only, crowd sounds will only be played during Starpower.",
                 "Dropdown": {
                     "Disabled": "Disabled",
                     "StarpowerClapsOnly": "Starpower Claps Only",
