Text Notifications for Vocalists (#1138)
* Implemented Text Notifications for vocalists. This includes: Hot Start, Strong Finish, X-Phrase Streak, Full Combo and New High Score
VocalsPlayerHUD now uses TextNotifications instead of its own duplicate implementation of the same functionality. Existing phrase result notifications (AWESOME, etc) now use TextNotifications as well.
Phrase Streak notifications can be disabled in the Settings menu (similar to Note Streak notifications for other instruments)
Note that some text notifications will cause phrase result notifications to be skipped. For example, a 10-Phrase streak implies an AWESOME rating.

* Addressed PR feedback

* Revert changes to gameplay.unity file

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -377,6 +377,7 @@
             "HotStart": "HOT START",
             "NewHighScore": "NEW HIGH SCORE",
             "NoteStreak": "{0:N0}-NOTE STREAK",
+			"PhraseStreak": "{0:N0}-PHRASE STREAK",
             "StarPowerReady": "STAR POWER READY",
             "StrongFinish": "STRONG FINISH"
         },
@@ -1146,6 +1147,15 @@
                 "Name": "Vocal Monitoring Volume",
                 "PauseName": "Monitoring",
                 "Description": "Adjusts the feedback you hear when singing."
+            },
+			"VocalStreakFrequency": {
+                "Name": "Vocal Streak Frequency",
+                "Description": "Sets the frequency of phrase streak notifications for vocalists.",
+                "Dropdown": {
+                    "Disabled": "Disabled",
+                    "Frequent": "5, 10, 20, 30, ...",
+                    "Sparse": "5, 10, 25, 50, ..."
+                }
             },
             "VocalsVolume": {
                 "Name": "Vocals Volume",
