--- a/Assets/StreamingAssets/lang/ja-JP.json
+++ b/Assets/StreamingAssets/lang/ja-JP.json
@@ -494,7 +494,7 @@
             },
             "AudioCalibration": {
                 "Name": "Audio Calibration (ms)",
-                "PauseName": "Audio (ms)",
+                "PauseName": "Audio Calibration (ms)",
                 "Description": "Audio calibration in milliseconds. Use the calibrator to automatically calibrate. Higher values make the audio play earlier, while lower ones make the audio play later."
             },
             "AccountForHardwareLatency": {
@@ -819,7 +819,7 @@
             },
             "VideoCalibration": {
                 "Name": "Video Calibration (ms)",
-                "PauseName": "Video (ms)",
+                "PauseName": "Video Calibration (ms)",
                 "Description": "Video calibration in milliseconds. Use the calibrator to automatically calibrate. This accounts for delays between the game's processing and the actual frame being displayed."
             },
             "VocalMonitoring": {
